--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "hmpps-tech-docs-monitor",
+  "name": "tech-docs-monitor",
   "description": "Sends Slack notifications for Tech Docs pages that need reviewing",
-  "repository": "https://github.com/ministryofjustice/hmpps-tech-docs-monitor",
+  "repository": "https://github.com/alphagov/tech-docs-monitor",
   "logo": "https://cdn.shopify.com/s/files/1/1061/1924/products/Dog_Emoji_large.png",
   "env": {
     "SITE_PAGE_API_URL": {
